Fixed positioning error. The error only occured when the vertical scroll bar became visible after opening a album but dispeared after closing. The fix simply forces the scroll bar to always be visible (should work on most browsers).

--- a/gallery/index.css
+++ b/gallery/index.css
@@ -4,6 +4,10 @@
 	font-family: "Open Sans Condensed";
 }
 
+html {
+	overflow-y: scroll;
+}
+
 body {
 	background-color: #eeeeee;
 }
